# agent-tag

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  TODO.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
agent_tag/: __init__.py  app.py  cli.py  config.py  lark_cli.py  models.py  serve.py  service.py  settings.py
agent_tag/adapters/: __init__.py  base.py  console.py  discord.py  lark.py  larkcli.py  registry.py  slack.py
agent_tag/backends/: __init__.py  base.py  claude_api.py  cli_acp.py  echo.py  openai_api.py  registry.py
agent_tag/core/: __init__.py  ambient.py  memory.py  orchestrator.py  policy.py  redaction.py  router.py
agent_tag/ingest/: __init__.py  crawler.py  indexer.py
agent_tag/store/: __init__.py  base.py  memory_store.py  sqlite_store.py
agent_tag/web/: __init__.py
agent_tag/web/static/: style.css
agent_tag/web/templates/: audit.html  base.html  channel.html  connections.html  dashboard.html  knowledge.html  login.html  memory_detail.html  memory_index.html  not_found.html  usage.html  workspace.html
agent_tag/workspace/: __init__.py  service.py
docs/: comparison.md  deploy.md  lark-setup.md  launch.md
site/: index.html
tests/: test_ambient.py  test_corpus.py  test_governance.py  test_ingest_indexer.py  test_lark_helpers.py  test_memory_isolation.py  test_orchestrator.py  test_orchestrator_handle.py  test_redaction.py  test_settings.py  test_settings_service.py  test_sqlite_store.py  test_store_extra.py  test_workspace.py
