[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-tag"
version = "0.0.1"
description = "Open, agent-agnostic, platform-agnostic AI teammate for group chat (Lark / Slack / Discord)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Agent Tag contributors" }]
keywords = ["ai", "agent", "slack", "lark", "feishu", "discord", "bot", "teammate"]
dependencies = []  # core runs on the stdlib — adapters/backends pull their own extras

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1", "python-multipart>=0.0.9"]
lark = ["lark-oapi>=1.4"]
slack = ["slack-bolt>=1.21", "aiohttp>=3.9"]
discord = ["discord.py>=2.4"]
anthropic = ["anthropic>=0.45"]
openai = ["openai>=1.50"]
all = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1", "python-multipart>=0.0.9",
       "lark-oapi>=1.4", "slack-bolt>=1.21", "aiohttp>=3.9", "discord.py>=2.4",
       "anthropic>=0.45", "openai>=1.50"]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6"]

[project.scripts]
agent-tag = "agent_tag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_tag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
